--- a/src/app/modules/account/pages/account-dashboard/account-dashboard.component.html
+++ b/src/app/modules/account/pages/account-dashboard/account-dashboard.component.html
@@ -5,9 +5,12 @@
     </div>
     <div class="d-flex"
         id="filter-wrapper">
-        <nz-date-picker nzMode="year"
-            [(ngModel)]="date"
-            (ngModelChange)="onChange($event)"></nz-date-picker>
+        <range-datepicker class="flex-even"
+            #inputDate
+            style="cursor: pointer;"
+            (dateSelectedEvent)="filterDate($event)"
+            (dateRemovedEvent)="filterRemoved($event)">
+        </range-datepicker>
 
         <!-- <wsh wide="24px"></wsh>
         <filter-dropdown-list class="flex-even"></filter-dropdown-list> -->
