--- a/src/app/modules/transaction/components/item-transaction/item-transaction.component.html
+++ b/src/app/modules/transaction/components/item-transaction/item-transaction.component.html
@@ -81,7 +81,7 @@
                     paddingleft="0px"
                     paddingright="0px"
                     float="right"
-                    (click)="belilagi(dangerTpl,item)"></red-button>
+                    (click)="belilagi(item)"></red-button>
             </ng-template>
 
             <ng-template #second>
@@ -94,7 +94,7 @@
                         paddingleft="0px"
                         paddingright="0px"
                         float="right"
-                        (click)="belilagi(dangerTpl,item)"></red-button>
+                        (click)="belilagi(item)"></red-button>
                 </ng-template>
 
                 <ng-template #fourth>
@@ -145,40 +145,5 @@
     </div>
 </div>
 
-
-<ng-template #dangerTpl>
-    <div id="wrapper-notification"
-        class="d-flex container justify-content-end">
-        <div>
-            <wsv wide="9px"></wsv>
-            <div id="wrapper-inner-notification">
-                <div class="d-flex justify-content-between align-self-center">
-                    <div id="keranjang-label">Keranjang</div>
-                    <div id="lihat-keranjang-label"
-                        class="d-flex justify-content-center align-items-center"
-                        (click)="pergiKeKeranjang()">Lihat Keranjang</div>
-                </div>
-                <wsv wide="13px"></wsv>
-                <div id="rounded-inner-notif"
-                    class="d-flex justify-content-between align-items-center">
-                    <div class="d-flex align-items-center">
-                        <img [src]="selectedItem?.product_image"
-                            id="notif-img"
-                            (error)="onImgError($event)">
-                        <wsh wide="10px"></wsh>
-                        <div>
-                            <div id="item-name">{{truncateChar(selectedItem?.product_name)}}</div>
-                            <div>{{selectedItem.qty}} Barang</div>
-                        </div>
-                    </div>
-                    <div id="item-price">{{selectedItem?.sell_price * selectedItem?.quantity|rupiah}}</div>
-                </div>
-
-            </div>
-
-        </div>
-
-    </div>
-
-
-</ng-template>
+<put-in-cart-notification [product]="notifItem"
+    quantity="1"></put-in-cart-notification>
