--- a/src/app/modules/account/components-kelola-purchaser/add-purchaser-editor/add-purchaser-editor.component.html
+++ b/src/app/modules/account/components-kelola-purchaser/add-purchaser-editor/add-purchaser-editor.component.html
@@ -50,13 +50,27 @@
 	<div class="p-2 bd-highlight"></div>
 	<div class="p-2 bd-highlight"></div>
 	<div class="mt-auto p-2 bd-highlight">
-		<red-button label="Tambah"
-			font="14px"
-			paddingtop="10px"
-			paddingbottom="10px"
-			paddingleft="0px"
-			paddingright="0px"
-			float="right"
-			(click)="submit()"></red-button>
+
+		<div class="d-flex">
+			<rounded-red-button *ngIf="valid()"
+				label="Tambah"
+				font="14px"
+				paddingtop="5px"
+				paddingbottom="5px"
+				paddingleft="20px"
+				paddingright="20px"
+				float="right"
+				(click)="submit()"></rounded-red-button>
+
+			<rounded-gray-button *ngIf="!valid()"
+				label="Tambah"
+				font="14px"
+				paddingtop="5px"
+				paddingbottom="5px"
+				paddingleft="20px"
+				paddingright="20px"
+				float="right"></rounded-gray-button>
+		</div>
+
 	</div>
 </div>
