--- a/src/app/shared/components/dialog-address-section/dialog-address-section.component.html
+++ b/src/app/shared/components/dialog-address-section/dialog-address-section.component.html
@@ -38,7 +38,8 @@
 		<wsv wide="43px"></wsv>
 	</div>
 	<div class="d-flex justify-content-center align-items-center"
-		style="cursor: pointer;">
+		style="cursor: pointer;"
+		(click)="tambahAlamat()">
 		<img src="../../../../assets/image/icons/plus-red.png"
 			class="plus-red">
 		<wsh wide="15px"></wsh>
