update dashboard and invoice

--- a/src/app/modules/account/components/output-graph/output-graph.component.html
+++ b/src/app/modules/account/components/output-graph/output-graph.component.html
@@ -1,4 +1,4 @@
-<figure class="highcharts-figure">
+<figure class="highcharts-figure chart-1">
     <div class="header">
         <div class="d-flex justify-content-between title">
             <div class="text">Pembelian Perusahaan</div>
@@ -11,16 +11,23 @@
     </p>
 </figure>
 
-<figure class="highcharts-figure">
-    <div class="d-flex justify-content-between">
-        <div class="text-user">Pembelian per User</div>
+<figure class="highcharts-figure chart-2">
+    <div class="header">
+        <div class="d-flex justify-content-between">
+            <div class="text-user">Pembelian per User</div>
+        </div>
     </div>
     <div id="container2"></div>
     <p class="highcharts-description">
     </p>
 </figure>
 
-<figure class="highcharts-figure">
+<figure class="highcharts-figure chart-3">
+    <div class="header">
+        <div class="d-flex justify-content-between">
+            <div class="text-user"></div>
+        </div>
+    </div>
     <div id="container3"></div>
     <p class="highcharts-description">
     </p>
