--- a/src/app/modules/account/components/output-graph/output-graph.component.scss
+++ b/src/app/modules/account/components/output-graph/output-graph.component.scss
@@ -1,10 +1,27 @@
+@import '../../../../../styles/variables/colors';
+@import '../../../../../styles/variables/fonts';
+
 figure.highcharts-figure {
-	margin-top: 30px;
+	margin-top: 50px;
+	border-radius: 25px;
+	box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.05);
 }
 .highcharts-data-table table {
 	min-width: 360px;
 	max-width: 800px;
 	margin: 1em auto;
+}
+
+.chart-1 {
+	height: 550px;
+}
+
+.chart-2 {
+	height: 200px;
+}
+
+.chart-3 {
+	height: 450px;
 }
 
 .highcharts-data-table table {
@@ -83,6 +100,36 @@ figure.highcharts-figure {
 	fill: white;
 }
 
+#container2 {
+	height: 100px;
+	overflow-y: auto !important;
+	margin-right: 16px;
+	margin-left: 16px;
+}
+#container2::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	border-radius: 2px;
+	width: 4px;
+	height: 9px;
+	background-color: #f2f2f2;
+	margin-right: 20px;
+}
+
+#container2::-webkit-scrollbar {
+	width: 4px;
+	background-color: #f2f2f2;
+}
+
+#container2::-webkit-scrollbar-thumb {
+	border-radius: 2px;
+	width: 4px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	background-color: $color-primary;
+}
+.highcharts-container {
+	overflow: visible !important;
+	overflow-y: scroll !important;
+}
 // g.highcharts-label.highcharts-data-label.highcharts-data-label-color-undefined {
 // 	color: #db0a2a;
 // 	cursor: pointer;
