bugs fix chevron in dashboard

--- a/src/app/modules/account/components/output-graph/output-graph.component.html
+++ b/src/app/modules/account/components/output-graph/output-graph.component.html
@@ -2,7 +2,7 @@
     <div class="header">
         <div class="d-flex justify-content-between title">
             <div class="text">Pembelian Perusahaan</div>
-            <div class="text-price">Total {{totals|rupiah}}</div>
+            <div class="text-price">{{totals|rupiah}}</div>
         </div>
         <horizontal-line></horizontal-line>
     </div>
