--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,9 +5,10 @@
 @import './variables/fonts';
 
 * {
-	font-family: $primary-font;
+	// font-family: $primary-font;
 	font-style: normal;
 }
+
 html,
 body {
 	height: 100%;
