--- a/src/app/modules/account/components-tagihan/tagihan-data/tagihan-data.component.html
+++ b/src/app/modules/account/components-tagihan/tagihan-data/tagihan-data.component.html
@@ -3,5 +3,5 @@
     <div class="p-2 bd-highlight long center tebal jari"
         (click)="lihatTagihanDetail(item)">{{item?.invoice_no}}</div>
     <div class="p-2 bd-highlight long center">{{item?.released_at | tanggal: 'dmy'}}</div>
-    <div class="p-2 bd-highlight long center tebal">{{item?.invoice_status}}</div>
+    <div class="p-2 bd-highlight long center tebal">{{translateStatus()}}</div>
 </div>
