--- a/src/app/modules/approval2/pages/approval-layout/approval-layout.component.scss
+++ b/src/app/modules/approval2/pages/approval-layout/approval-layout.component.scss
@@ -33,6 +33,15 @@
 	padding-right: 10px;
 }
 
+.btn-hide{
+	display: none;
+	min-height:25px;
+}
+
+.btn-shw{
+	display: inline;
+}
+
 #terpilih-label {
 	font-style: normal;
 	font-weight: bold;
