--- a/src/app/shared/components/check-box-two/check-box-two.component.scss
+++ b/src/app/shared/components/check-box-two/check-box-two.component.scss
@@ -19,6 +19,14 @@
 	width: 10%;
 }
 
+.btn-hide{
+	display: none;
+}
+
+.btn-shw{
+	display: inline;
+}
+
 #right-box {
 	position: relative;
 	float: left;
