--- a/src/app/modules/approval2/components/item-card/item-card.component.html
+++ b/src/app/modules/approval2/components/item-card/item-card.component.html
@@ -8,7 +8,8 @@
 					class="check-box-container"
 					[detSupplier]="item.supplier_name"
 					[detPurchaser]="item.requester_fullname"
-					[detDate]="item.submitted_at"></check-box-two>
+					[detDate]="item.submitted_at"
+					[buttonAvail]="buttonAvail"></check-box-two>
 			</div>
 			<div class="d-flex flex-grow-1 justify-content-between">
 				<div>
