--- a/src/app/shared/components/box-cart-price/box-cart-price.component.scss
+++ b/src/app/shared/components/box-cart-price/box-cart-price.component.scss
@@ -86,6 +86,14 @@
 	cursor: pointer;
 }
 
+.btn-hide{
+	display: none;
+}
+
+.btn-shw{
+	display: inline;
+}
+
 .btn-price-abu2 {
 	width: 100%;
 	height: 36px;
