Hide 'Tolak' in Approval page (except Manager Role)

--- a/src/app/modules/approval2/components/item-card/item-card.component.scss
+++ b/src/app/modules/approval2/components/item-card/item-card.component.scss
@@ -17,6 +17,16 @@
 	width: 152px;
 }
 
+
+.btn-hide{
+	display: none;
+	min-height:25px;
+}
+
+.btn-shw{
+	display: inline;
+}
+
 .header-wrapper {
 	padding-left: 15px;
 	padding-right: 15px;
