default range and start-end date in dashboard

--- a/src/app/modules/account/components/chart-dropdown/chart-dropdown.component.html
+++ b/src/app/modules/account/components/chart-dropdown/chart-dropdown.component.html
@@ -9,7 +9,9 @@
         <div id="arrow-down-gray-wrapper"
             class="d-flex justify-content-center align-items-center">
             <img id="arrow-down-gray"
-                src="../../../../../assets/image/icons/arrow_down_gray.png">
+                width="30px"
+                height="30px"
+                src="../../../../../assets/image/icons/range.png">
         </div>
     </div>
     <div class="item-placeholder"
