--- a/src/app/modules/account/pages/account-dashboard/account-dashboard.component.html
+++ b/src/app/modules/account/pages/account-dashboard/account-dashboard.component.html
@@ -5,18 +5,18 @@
     </div>
     <div class="d-flex"
         id="filter-wrapper">
-        <chart-dropdown style="width: 200px;"
-            #inputFilter
-            [selected]="selectedPurchaser"
-            (onSelect)="selectPurchaser($event)"
-            class="flex-even"
-            style="cursor: pointer;"></chart-dropdown>
-        <range-datepicker class="flex-even"
+        <dashboard-datepicker class="flex-even"
             #inputDate
             style="cursor: pointer;"
             (dateSelectedEvent)="filterDate($event)"
             (dateRemovedEvent)="filterRemoved($event)">
-        </range-datepicker>
+        </dashboard-datepicker>
+        <chart-dropdown style="width: 200px;"
+            #inputFilter
+            [selected]="selectedPurchaser"
+            (onSelect)="selectPurchaser($event)"
+            class="flex-even-1"
+            style="cursor: pointer;"></chart-dropdown>
 
         <!-- <wsh wide="24px"></wsh>
         <filter-dropdown-list class="flex-even"></filter-dropdown-list> -->
