--- a/src/app/modules/cart2/components/pilih-semua/pilih-semua.component.html
+++ b/src/app/modules/cart2/components/pilih-semua/pilih-semua.component.html
@@ -1,7 +1,5 @@
 <div class="d-flex">
-	<check-box-two [checked]="true"
-		[allowChanges]="true"
-		(onClickEvent)="handleClickCheckbox($event)"
-		class="check-box-container"></check-box-two>
+	<checkbox [checked]="true"
+		(onClicked)="handleClickCheckbox($event)"></checkbox>
 	<div class="pilihsemua">Pilih Semua</div>
 </div>
