--- a/src/app/modules/approval2/components/item-card/item-card.component.html
+++ b/src/app/modules/approval2/components/item-card/item-card.component.html
@@ -40,7 +40,7 @@
 			<div id="tolak-button"
 				class="container-29 d-flex flex-grow-1 flex-row-reverse align-items-end">
 				<div (click)="tolakItem(item)"
-					class="tolak"
+					id="tolak"
 					[className]="buttonAvail ? 'btn-shw':'btn-hide'">Tolak</div>
 			</div>
 
