--- a/src/app/layout/components/header-category-button/header-category-button.component.scss
+++ b/src/app/layout/components/header-category-button/header-category-button.component.scss
@@ -44,6 +44,7 @@
 	left: -120px;
 	background: $putih-tok;
 	border-radius: 9.45312px;
+	height: 570px;
 	padding-bottom: 30px;
 }
 
@@ -63,6 +64,7 @@
 	flex: 0 0 215px;
 	padding-top: 35px;
 	padding-left: 45px;
+	overflow: scroll;
 }
 
 #catalog-kategori-container-2 {
