--- a/src/app/modules/approval2/pages/approval-layout/approval-layout.component.html
+++ b/src/app/modules/approval2/pages/approval-layout/approval-layout.component.html
@@ -77,7 +77,7 @@
                         *ngIf="items?.length>=1">
                         <div class="d-flex w-100">
                             <div class="d-flex w-100 justify-content-between">
-                                <div class="d-flex">
+                                <!-- <div class="d-flex">
                                     <check-box-two [checked]="true"
                                         [allowChanges]="true"
                                         (onClickEvent)="pilihSemuaClickEvent($event)"
@@ -85,7 +85,7 @@
                                         class="check-box-container"></check-box-two>
                                     <div id="pilihsemua"
                                         [className]="buttonAvail ? 'btn-shw':'btn-hide'">Pilih Semua</div>
-                                </div>
+                                </div> -->
 
                                 <div class="d-flex">
                                     <div id="terpilih"
