--- a/src/app/layout/pages/login-layout2/login-layout2.component.scss
+++ b/src/app/layout/pages/login-layout2/login-layout2.component.scss
@@ -6,7 +6,7 @@
 .main-container {
 	height: 100vh;
 	overflow: hidden;
-	// background-image: url('../../../../assets/image/icons/login-page.svg');
+	background-image: url('../../../../assets/image/icons/rs.jpg');
 	background-position: right 0px bottom 10%;
 	background-repeat: no-repeat;
 	background-size: 100%;
