--- a/src/app/layout/components/get-otp-button/get-otp-button.component.html
+++ b/src/app/layout/components/get-otp-button/get-otp-button.component.html
@@ -1,12 +1,12 @@
 <rounded-red-button *ngIf="valid"
-    label="Get OTP"
+    label="Login Sekarang"
     paddingtop="8px"
     paddingbottom="8px"
     font="17px"
     [matchParentWidth]="true"
     (click)="buttonClick()"></rounded-red-button>
 <rounded-gray-button *ngIf="!valid"
-    label="Get OTP"
+    label="Login Sekarang"
     paddingtop="8px"
     paddingbottom="8px"
     font="17px"
