--- a/src/app/shared/components/footer-bar/footer-bar.component.html
+++ b/src/app/shared/components/footer-bar/footer-bar.component.html
@@ -7,7 +7,7 @@
 	<div class="container d-flex justify-content-between align-items-center w-100 h-100"
 		id="footer-inner-wrapper">
 
-		<img src="../../../../assets/image/logo/logo-with-name.png"
+		<!--<img src="../../../../assets/image/logo/rs.png"
 			id="footer-logo">
 
 
@@ -28,9 +28,10 @@
 				titleOne="Respon"
 				titleTwo="Cepat"></footer-feature>
 		</div>
+	-->
 
 		<footer-customer-support id="cs-logo"
-			titleTwo="0812 2335 5600 "></footer-customer-support>
+			titleTwo="0888 0000 1111 "></footer-customer-support>
 
 	</div>
 </div>
