--- a/src/app/layout/components/header/header.component.scss
+++ b/src/app/layout/components/header/header.component.scss
@@ -6,7 +6,7 @@
 	color: $putih-gelap-dikit;
 	z-index: 1000;
 	width: 100%;
-	background: $color-primary;
+	background: $hijau-metalik;
 	box-shadow: $box-shadow-2;
 	padding-top: 5px;
 	padding-bottom: 2px;
