--- a/src/app/layout/components/login-card2/login-card2.component.html
+++ b/src/app/layout/components/login-card2/login-card2.component.html
@@ -28,7 +28,7 @@
                             class="rounded-gray d-flex w-100 justify-content-center email-input"
                             placeholder="Username"
                             formControlName="email"
-                            (keyup.enter)="sendotp()"
+                            (keyup.enter)="login()"
                             required>
                     </div>
 
@@ -37,15 +37,15 @@
                         <input type="password"
                             class="rounded-gray d-flex w-100 justify-content-center email-input"
                             placeholder="Password"
-                            formControlName="email"
-                            (keyup.enter)="sendotp()"
+                            formControlName="password"
+                            (keyup.enter)="login()"
                             required>
                     </div>
 
 
                     <wsv wide="20px"></wsv>
                     <get-otp-button [valid]="firstFormGroup.valid"
-                        (getOtpEvent)="sendotp()"></get-otp-button>
+                        (getOtpEvent)="login()"></get-otp-button>
 
 
 
