--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,3 +1,3 @@
 <div class="d-flex justify-content-center footer-container align-items-center">
-	© 2020 Hak Cipta Terpelihara Narindo Solusi Telekomunikasi.
+	© 2021 All rights reserved
 </div>
