--- a/src/app/modules/karyawan/components/info-karyawan-card/info-karyawan-card.component.html
+++ b/src/app/modules/karyawan/components/info-karyawan-card/info-karyawan-card.component.html
@@ -1,51 +1,35 @@
-<div class="d-flex justify-content-between align-items-center judulkonten">
-    <div class="label-title">
-        Data Karyawan
-    </div>
-    <red-button label="+ Tambah Karyawan"
-        font="14px"
-        paddingtop="10px"
-        width="140px"
-        paddingbottom="10px"
-        paddingleft="0px"
-        paddingright="0px"
-        float="right"
-        (click)="tambahKaryawan()"></red-button>
-</div>
-<wsv wide="80px"></wsv>
-
 <div class="info-perusahaan-card-wrapper d-flex"
     style="padding-left:60px;padding-right:60px;">
     <div class="flex-grow-1">
         <div class="flex perusahaan-label"
             style="width:5%;float:left;text-align:right;">
-            NO
+            {{index+1}}.
         </div>
         <div style="width:5%;float:left;text-align:right;">&nbsp;</div>
 
         <div class="flex perusahaan-label"
             style="width:25%;float:left;">
-            NAMA KARYAWAN
+            {{karyawan?.NAMAKARY}}
         </div>
         <div class="flex perusahaan-label"
             style="width:15%;float:left;">
-            JABATAN
+            {{karyawan?.JABATAN}}
         </div>
         <div class="flex perusahaan-label"
             style="width:15%;float:left;">
-            GENDER
+            {{karyawan?.JK}}
         </div>
         <div class="flex perusahaan-label"
             style="width:10%;float:left;">
-            STATUS
+            {{karyawan?.STATUSKKRY}}
         </div>
         <div class="flex perusahaan-label"
             style="width:10%;float:left;">
-            UNITKERJA
+            {{karyawan?.UNITKERJA}}
         </div>
         <div class="flex perusahaan-label"
             style="width:10%;float:left;">
-            KODE PT
+            {{karyawan?.KODEPT}}
         </div>
 
 
@@ -57,19 +41,10 @@
         </div>
     </div>
     <div class="d-flex">
-        <icon-edit></icon-edit>
+        <icon-edit (click)="editData()"></icon-edit>
         <wsh wide="16px"></wsh>
-        <icon-hapus></icon-hapus>
+        <icon-hapus (click)="deleteData()"></icon-hapus>
         <wsh wide="16px"></wsh>
+
     </div>
-
-</div>
-
-<div *ngFor="let karyawan of karyawans; index as i"
-    style="overflow: auto;">
-    <info-karyawan-card [index]="i"
-        [karyawan]="karyawan"
-        (editEvent)="editKaryawan(karyawan)"
-        (deleteEvent)="hapusKaryawan(karyawan)">
-    </info-karyawan-card>
 </div>
